[project]
name = "helix-nanolm"
version = "0.1.0"
description = "Optimize a small GPT from scratch — helix edition of karpathy/autoresearch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=18.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.0",
]
