[project]
name = "helix-nanolm"
version = "0.1.0"
description = "Optimize a small GPT from scratch — helix edition of karpathy/autoresearch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "helices[claude]>=0.1.3",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.5.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
